// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseLisItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="0"
      key="0"
      note=""
    />
    <ExpenseLisItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="1"
      key="1"
      note=""
    />
    <ExpenseLisItem
      amount={4500}
      createdAt={345600000}
      description="credit card"
      id="2"
      key="2"
      note=""
    />
  </div>
</div>
`;

exports[`should render expense list with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop"
    >
      Expense
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;
